src/components/Sections/HomeMenu/styles.scss
@import 'assets/scss/variables/__all.scss';
$transition: all 1.4s cubic-bezier(.81,.42,.33,1);

.HomeMenu{
    position: absolute;
    left: 0;
    top: 0;
    width: 240px;
    height: 100vh;
    background-color: #831313c0;
    z-index: 7;
    
    @media screen and (max-width: $bp-LG){
        display: flex;
        height: 100%;
        align-items: center;
        justify-content: center;
        background-color: transparent;
        width: 100vw;
        z-index: unset;
    }

    &.desactived{
        pointer-events: none;
    }
    
    &__toggler{
        display: none;
        position: absolute;
        top: 0;
        left: 0;
        background-color: #831313ab;
        width: 125px;
        height: 80px;
        transition: $transition;
        
        @media screen and (max-width: $bp-LG){
            z-index: 5;
            display: block;
        }

        &.toggled{
            background-color: #831313;
            width: 100vw;
            height: 100vh;

            .HomeMenu__content{
                opacity: 1;
                pointer-events: all;
            }
        }
        
        button{
            position: relative;
            left: 74px;
            top: 16px;
            background: none;
            border: none;
            transform: translateX(-240%);
            transition: $transition;

            // Click overlay
            &:after{
                content: '';
                position: absolute;
                left: 0;
                top: 0;
                width: 40px;
                height: 40px;
            }

            div{
                position: absolute;
                height: 1px;
                width: 24px;
                background-color: rgba(255, 255, 255, 0.905);
                transition: $transition;

                &:nth-child(1){
                    top: 1px;
                    transform: rotate(0);
                }

                &:nth-child(2){
                    top: 11px;
                }

                &:nth-child(3){
                    top: 21px;
                    transform: rotate(0);
                }
            }

            &.active{
                left: 50%;
                top: 7%;

                div{
                    &:nth-child(1){
                        transform: rotate(40deg) translateX(62%);
                    }

                    &:nth-child(3){
                        transform: rotate(-40deg) translateX(62%);
                    }

                    &:nth-child(2){
                        opacity: 0;
                    }
                }
            }
        }
    }
    
    &__content{
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        position: relative;
        height: 100%;
        transition: $transition;

        @media screen and (max-width: $bp-LG){
            height: auto;
            opacity: 0;
            pointer-events: none;
            background-color: transparent;
            z-index: 5;

            &.toggled{
                opacity: 1;
                pointer-events: all;
            }
        }
    
    }

    &__underline{
        position: absolute;
        left: 50%;
        transform: translateX(-50%);
        width: 100px;
        height: 1px;
        background-color: rgba(255, 255, 255, 0.666);    
        border: none;
        transition: $transition;
    }

    &__item{
        background-color: none;
        border: none;
        background: none;
        color: rgba(255, 255, 255, 1);
        text-transform: uppercase;
        font-size: 16px;
        font-weight: 300;
        letter-spacing: 0.5px;
        transition: $transition;

        @media screen and (max-width: $bp-LG){
            margin: 25px 0 !important;
            font-weight: 400;
            letter-spacing: -0.5px;
        }

        &:not(:last-child){
            margin-bottom: 75px;
        }

        &.home{
           font-family: 'Geo Sans';
           color: rgba(255, 255, 255, 0.915);
           font-size: 32px;
           letter-spacing: 1px;
           position: absolute;
           top: 143px;
           left: 50%;
           transform: translateX(-50%);
           opacity: 0;
           height: 0;
           pointer-events: none;
           transition: $transition;

           @media screen and (max-height: 730px){
               top: 100px;
           }

           @media screen and (max-width: $bp-LG){
                display: none;
           }
        }
    }

    &.expanded{

        .HomeMenu__content{
            padding-top: 40px;
        }

        .home{
            pointer-events: all;
            opacity: 1;
        }

        .HomeMenu__item{
            &:not(:last-child){
                margin-bottom: 35px;
            }
        }
    }
}

